<resources>
    <string name="app_name">Note Storing Application</string>
    <string name="notes_label">Notes</string>
    <string name="add_note_button">Add Note</string>
    <string name="delete_note_button">Delete Note</string>
    <string name="delete_selected_note_button">Delete Selected Note</string>
    <string name="note_name_label">Note Title</string>
    <string name="note_content_label">Note Information</string>
    <string name="save_note_button">Save Note</string>
    <string name="note_name_hint">Enter note title</string>
    <string name="note_content_hint">Enter note information</string>

</resources>