<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <TextView
        android:id="@+id/lblNoteName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/note_name_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etNoteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblNoteName"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/note_name_hint"
        android:inputType="text"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/lblNoteContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_content_label"
        android:textSize="18sp"
        android:layout_below="@+id/etNoteName"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/etNoteContent"
        android:layout_width="381dp"
        android:layout_height="96dp"
        android:layout_below="@+id/lblNoteContent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/note_content_hint"
        android:inputType="textMultiLine"
        android:lines="5" />

    <Button
        android:id="@+id/save_note_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_note_button"
        android:layout_below="@+id/etNoteContent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>
</RelativeLayout>
